data_source views update

--- a/templates/edit-index.html
+++ b/templates/edit-index.html
@@ -20,7 +20,7 @@
             <br> 
             <div class="container products-shelf">
                 <h3><a style="font-size: 20px;" href="{{ admin }}">< Back to Manager</a></h3><br>
-                <button id="" type="submit"><h3>commit</h3></button>
+                <button id="" type="submit"><h3>commit</h3></button><div>{{ tips }}</div>
             </div>
             <br>
             <div class="container">
