running saveData in views

--- a/templates/edit-index.html
+++ b/templates/edit-index.html
@@ -29,8 +29,8 @@
             </div>
             <br>
             <div class="container products-shelf">
-                <h3><input style="font-size: 18px;" type="text" name="id" id="" value="{{ id.0.id }}" /></h3>
-                <h3><input style="font-size: 18px;" type="text" name="asin" id="" value="{{ asin.0.asin }}" /></h3>
+                <b>id</b><h3><input style="font-size: 18px;" type="text" name="id" id="" value="{{ id.0.id }}" /></h3>
+                <b>asin</b><h3><input style="font-size: 18px;" type="text" name="asin" id="" value="{{ asin.0.asin }}" /></h3>
                 <h3><b>Title-01</b></h3>
                 <textarea style="font-size: 18px;" name="bullet_point_01" id="" cols="130" rows="2">{{ bullet_point.0.bullet_point_01 }}</textarea>
                 <h3><b>Title-02</b></h3>
