--- a/templates/admin.html
+++ b/templates/admin.html
@@ -29,8 +29,8 @@
          -->
         <div class="container">
             <ul>
-                <li><a style="font-size: 20px;" href="{{ manager }}">Manager ProductList</a></li>
                 <li><a style="font-size: 20px;" href="{{ edit_index }}">Edit Index</a></li>
+                <li><a style="font-size: 20px;" href="{{ edit_listing }}">Edit Listing</a></li>
             </ul>
             
         </div>
