--- a/templates/edit-listing.html
+++ b/templates/edit-listing.html
@@ -23,7 +23,7 @@
         <div class="wrap">
             <br>
             <div class="container products-shelf">
-                <h3><b>{{ asin }}</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="font-size: 20px;" href="{{ manager }}">< Back to editList</a></h3><br>
+                <h3><b>{{ asin }}</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="font-size: 20px;" href="{{ edit_listing }}">< Back to editList</a></h3><br>
                 <b>price: </b><input style="font-size: 18px;" type="text" name="price" id="" value="{{ listing.price }}" />
                 <b>status: </b><input style="font-size: 18px;" type="text" name="status" id="" value="{{ listing.status }}" />
                 <button id="" type="submit"><h3>commit</h3></button>
