--- a/templates/yes.html
+++ b/templates/yes.html
@@ -33,7 +33,7 @@
             <div style="margin: 20px 0 20px 0;">
                 <a style="font-size: 20px;" href="{{ view }}" target="_blank">View</a> | 
                 <a style="font-size: 20px;" href="{{ again }}">Again</a> | 
-                <a style="font-size: 20px;" href="{{ manager }}">Back to ...</a>
+                <a style="font-size: 20px;" href="{{ admin }}">Back to ...</a>
             </div>
             <div><img src="{{ img }}" alt=""></div>
         </div>
