--- a/templates/manager-product-list.html
+++ b/templates/manager-product-list.html
@@ -22,14 +22,16 @@
         {% endfor %} -->
         {% for listing in listing %}
         <br>
-        <div class="container"><a href="admin&edit={{ listing.asin }}"><b>{{listing.asin}} | {{ listing.status }}</b> -- {{listing.title}}</a></div>
+        <div class="container"><a href="admin&edit={{ listing.asin }}"><b>{{ listing.status }} > {{listing.asin}}</b> -- {{listing.title}}</a></div>
         {% endfor %}
         <!-- <ul class="container">
         {% for listing in listing %}
         <li><a href="admin&edit={{ listing.asin }}"><b>{{listing.asin}}</b> >>> {{listing.title}}</a></li>
         {% endfor %}
         </ul> -->
-        
+        <br>
+        <br>
+        <br>
     </div>
 
     {% include "footer.html" %}
