--- a/templates/my-account.html
+++ b/templates/my-account.html
@@ -17,8 +17,8 @@
         <div class="container">
             
             <ul>
-                <!-- <label for="test">Your name: </label> -->
-                <li>email: {{ my_account.email }}</li>
+                <h1>MyAccount</h1>
+                <!-- <li>email: {{ my_account.email }}</li>
                 <li>passWord: {{ my_account.password }}</li>
                 <li>UserName: {{ my_account.user_id }}</li>
                 <li>FirstName: {{ my_account.first_name }}</li>
@@ -27,7 +27,7 @@
                 <li>Street: {{ my_account.street }}</li>
                 <li>City: {{ my_account.city }}</li>
                 <li>Country: {{ my_account.country }}</li>
-                <li>Code: {{ my_account.code }}</li>
+                <li>Code: {{ my_account.code }}</li> -->
 
             </ul>
 
