user account updete

--- a/templates/account.html
+++ b/templates/account.html
@@ -14,7 +14,7 @@
 
         <div class="container">
             
-            <form class="login" action="/JAL/yes" method="post">
+            <form class="login" action="/JAL/done" method="post">
                 {%csrf_token%}
                 <!-- {{ form }} -->
                 <div>
@@ -56,7 +56,7 @@
                         <button id="login" type="submit">Submit</button>
                     </li>
                     <li>
-                        <a href="{{ nav_account.Login.0 }}">{{ nav_account.Login.1 }}</a>
+                        <a href="{{ nav_account.login.0 }}">{{ nav_account.login.1 }}</a>
                         |
                         <a href="{{ nav_account.account.0 }}">{{ nav_account.account.1 }}</a>
                     </li>
