--- a/templates/account.html
+++ b/templates/account.html
@@ -17,7 +17,7 @@
             <form class="login" action="/JAL/done" method="post">
                 {%csrf_token%}
                 <!-- {{ form }} -->
-                <div>
+                <div style="align-content: center;">
                     <h1>{{ page_id }}</h1>
                 </div>
                 <ul>
