--- a/templates/done.html
+++ b/templates/done.html
@@ -27,6 +27,17 @@
         <!-- 
             commit listing data done
          -->
+
+        <div class="container">
+            <div style="margin: 20px 0 20px 0;"><h1>{{ exist }}</h1></div>
+            
+            <div style="margin: 20px 0 20px 0;">
+                <a style="font-size: 20px;" href="{{ products }}" target="_blank">Shopping</a> | 
+                <a style="font-size: 20px;" href="{{ admin }}">Check Aount</a>
+            </div>
+            <div><img src="{{ img }}" alt=""></div>
+        </div>
+
         <div class="container">
             <div style="margin: 20px 0 20px 0;"><h1>{{ tag }}{{ status }}</h1></div>
             
