--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -23,13 +23,14 @@
                 <ul>
                     <!-- <label for="test">Your name: </label> -->
                     <li>
-                        <input id="email" type="text" name="email" value="Your Email" onclick="loginControl('accountClick')" onblur="loginControl('accountOnblur')">
-                        <span>{{ exist }}</span>
-                        <span style="display:none">email error</span>
+                        <input id="email" type="text" name="email" value="Email" onclick="verifyAccountInfo('accountClick')" onblur="verifyAccountInfo('accountOnblur')">
+                        <!-- <span id="email_tips">{{ tips }}</span> -->
+                        <span id="email_format" style="display:none">email format error</span>
                     </li>
                     <li>
-                        <input id="passWord" type="text" name="passWord" value="123+ABC+!@#" onclick="loginControl('passWordClick')" onblur="loginControl('passWordOnblur')">
-                        <span style="display:none">email error</span>
+                        <input id="password" type="text" name="password" value="Password" onclick="verifyAccountInfo('passWordClick')" onblur="verifyAccountInfo('passWordOnblur')">
+                        <span id="password_tips">{{ tips }}</span>
+                        <!-- <span id="password_tip" class="password_tip" style="display:none">email error</span> -->
                     </li>
                     <li>
                         <button id="login" type="submit"><h3>Submit</h3></button>
@@ -37,7 +38,7 @@
                     <li>
                         <a href="{{ nav_account.login.0 }}">{{ nav_account.login.1 }}</a>
                         |
-                        <a href="{{ nav_account.account.0 }}">Create an Account</a>
+                        <a href="{{ nav_account.account.0 }}">Create Account</a>
                     </li>
                 </ul>
             </form>
