--- a/templates/done.html
+++ b/templates/done.html
@@ -29,7 +29,7 @@
          -->
 
         <div class="container">
-            <div style="margin: 20px 0 20px 0;"><h1>{{ exist }}</h1></div>
+            <div style="margin: 20px 0 20px 0;"><h1>{{ tips }}</h1></div>
             
             <div style="margin: 20px 0 20px 0;">
                 <a style="font-size: 20px;" href="{{ products }}" target="_blank">Shopping</a> | 
