--- a/templates/my-cart.html
+++ b/templates/my-cart.html
@@ -59,6 +59,7 @@
             </div>
             <div class="margin-20">
                 <a href="{{ url_page_id_order }}" type="sumbit" class="widget-btn float-right">Commit Order</a>
+                <button id="cart" type="submit"><h3>Commit Order</h3></button>
             </div>
             <!---------------------sumbit--------------------->
         </div>
