--- a/templates/order.html
+++ b/templates/order.html
@@ -85,6 +85,7 @@
             </div>
             <div class="margin-20">
                 <a href="{{ nav_account.account }}" class="widget-btn float-right">CheckOut</a>
+                <button id="order" type="submit"><h3>CheckOut</h3></button>
             </div>
             <!---------------------CheckOut--------------------->
         </div>
