--- a/templates/nav.html
+++ b/templates/nav.html
@@ -22,11 +22,11 @@
         </div>
         <div class="account flex-container">
             {% if user_account %}
-            <div><a href="{{ nav_account.signUp.0 }}" class="material-symbols-outlined size-30">account_circle</a></div>
+            <div><a href="{{ nav_account.login.0 }}" title="login" class="material-symbols-outlined size-30">account_circle</a></div>
             {% else %}
             <div><a href="{{ nav_account.myAccount.0 }}" class="material-symbols-outlined size-30">account_circle</a></div>
             {% endif %}
-            <div><a href="{{ nav_account.Cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></div>
+            <!-- <div><a href="{{ nav_account.Cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></div> -->
         </div>
     </div>
 
