--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -14,7 +14,7 @@
 
         <div class="container">
 
-            <form class="account_signup" action="/JAL/verifyUserAccount" method="post">
+            <form class="account_signup" action="/JAL/account=createAccount" method="post">
                 {%csrf_token%}
                 <!-- {{ form }} -->
                 <div style="text-align: center; height: 60px; padding-top: 30px;">
