--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
 
         <div class="container">
             
-            <form class="account_login" action="/JAL/login" method="post">
+            <form class="account_login" action="/JAL/account=login" method="post">
                 {%csrf_token%}
                 <!-- {{ form }} -->
                 <div style="text-align: center; height: 60px; padding-top: 30px;">
