--- a/templates/my-account.html
+++ b/templates/my-account.html
@@ -1,5 +1,3 @@
-<!-- {%load static%}
-{%load range%} -->
 <!-- {%load static%} -->
 <!DOCTYPE html>
 <html>
@@ -18,7 +16,7 @@
             
             <ul>
                 <h1>MyAccount</h1>
-                <!-- <li>email: {{ my_account.email }}</li>
+                <li>email: {{ my_account.email }}</li>
                 <li>passWord: {{ my_account.password }}</li>
                 <li>UserName: {{ my_account.user_id }}</li>
                 <li>FirstName: {{ my_account.first_name }}</li>
@@ -27,7 +25,7 @@
                 <li>Street: {{ my_account.street }}</li>
                 <li>City: {{ my_account.city }}</li>
                 <li>Country: {{ my_account.country }}</li>
-                <li>Code: {{ my_account.code }}</li> -->
+                <li>Code: {{ my_account.code }}</li>
 
             </ul>
 
