--- a/templates/nav.html
+++ b/templates/nav.html
@@ -22,10 +22,17 @@
         </div>
         <div class="account flex-container">
             {% if user_account %}
+            <div><a href="{{ nav_account.login.0 }}">{{ nav_account.signup.1 }}</a></div>
+            <div><a href="{{ nav_account.myAccount.0 }}">{{ nav_account.cart.1 }}</a></div>
+            {% else %}
+            <div><a href="{{ nav_account.login.0 }}">{{ nav_account.signup.1 }}</a></div>
+            <div><a href="{{ nav_account.myAccount.0 }}">{{ nav_account.myAccount.1 }}</a></div>
+            {% endif %}
+            <!-- {% if user_account %}
             <div><a href="{{ nav_account.login.0 }}" title="login" class="material-symbols-outlined size-30">account_circle</a></div>
             {% else %}
             <div><a href="{{ nav_account.myAccount.0 }}" class="material-symbols-outlined size-30">account_circle</a></div>
-            {% endif %}
+            {% endif %} -->
             <!-- <div><a href="{{ nav_account.Cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></div> -->
         </div>
     </div>
