--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     
 
     <div id="B0BTXB89PG" class="wrap" img_name="{{ img_name.B0BTXB89PG }}">
-    
+    <div>{{ test }}</div>
         <div style="box-shadow: inset 0px -1px 30px 1px rgb(0, 0, 0, 0.3); height: 100%;">
             <div class="position">
                 <div>
