--- a/templates/my-account.html
+++ b/templates/my-account.html
@@ -16,6 +16,7 @@
             
             <ul>
                 <h1>MyAccount</h1>
+                <li>{{ test }}</li>
                 <li>email: {{ my_account.email }}</li>
                 <li>passWord: {{ my_account.password }}</li>
                 <li>UserName: {{ my_account.user_id }}</li>
