--- a/templates/nav.html
+++ b/templates/nav.html
@@ -21,7 +21,7 @@
             </ul>
         </div>
         <div class="account flex-container">
-            {% if user_account %}
+            {% if user_status %}
             <div><a href="{{ nav_account.myAccount.0 }}">{{ user_account }}</a></div>
             <!-- <div><a href="{{ nav_account.cart.0 }}">{{ nav_account.cart.1 }}</a></div> -->
             <div><a href="{{ nav_account.cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></div>
