--- a/templates/my-account.html
+++ b/templates/my-account.html
@@ -16,7 +16,7 @@
             
             <ul>
                 <h1>MyAccount</h1>
-                <li>{{ test }}</li>
+                <li>login_status: {{ user_status }}</li>
                 <li>email: {{ my_account.email }}</li>
                 <li>passWord: {{ my_account.password }}</li>
                 <li>UserName: {{ my_account.user_id }}</li>
@@ -27,7 +27,7 @@
                 <li>City: {{ my_account.city }}</li>
                 <li>Country: {{ my_account.country }}</li>
                 <li>Code: {{ my_account.code }}</li>
-
+                <li><a href="logout">Logout</a></li>
             </ul>
 
         </div>
