--- a/templates/edit-index.html
+++ b/templates/edit-index.html
@@ -15,7 +15,7 @@
             <input type="text" value="{{ title_01.bullet_point_01 }}">
         </div> -->
         
-        <form class="login" action="/JAL/admin&edit-index-done" method="post">
+        <form class="login" action="/JAL/adminjessie&edit-index-status-done" method="post">
             {%csrf_token%}
             <br> 
             <div class="container products-shelf">
