--- a/templates/nav.html
+++ b/templates/nav.html
@@ -21,14 +21,15 @@
             </ul>
         </div>
         <div class="account flex-container">
+            <ul>
             {% if user_status %}
-            <div><a href="{{ nav_account.myAccount.0 }}">{{ user_account }}</a></div>
+            <li><a href="{{ nav_account.myAccount.0 }}">{{ user_email }}</a></li>
             <!-- <div><a href="{{ nav_account.cart.0 }}">{{ nav_account.cart.1 }}</a></div> -->
-            <div><a href="{{ nav_account.cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></div>
+            <li><a href="{{ nav_account.cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></li>
             {% else %}
-            <div><a href="{{ nav_account.login.0 }}">{{ nav_account.login.1 }}</a></div>
+            <li><a href="{{ nav_account.login.0 }}">{{ nav_account.login.1 }}</a></li>
             <!-- <div><a href="{{ nav_account.cart.0 }}">{{ nav_account.cart.1 }}</a></div> -->
-            <div><a href="{{ nav_account.cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></div>
+            <li><a href="{{ nav_account.cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></li>
             {% endif %}
             <!-- {% if user_account %}
             <div><a href="{{ nav_account.login.0 }}" title="login" class="material-symbols-outlined size-30">account_circle</a></div>
@@ -36,6 +37,7 @@
             <div><a href="{{ nav_account.myAccount.0 }}" class="material-symbols-outlined size-30">account_circle</a></div>
             {% endif %} -->
             <!-- <div><a href="{{ nav_account.Cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></div> -->
+            </ul>
         </div>
     </div>
 
